objects/tspa__Remote_Assistant_MultiLanguage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tspa__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Selected__c</fullName>
        <label>Selected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant -MultiLanguage</label>
</CustomObject>